Fix: center-align select options on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -267,5 +267,9 @@ select.custom-button {
     width: 80px !important;
     height: auto !important;
   }
+  .custom-button option {
+    text-align: center;
+  }
+  
 }
 
